--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Mi web</title>
 		<meta charset = 'utf-8'/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
-		<link rel="stylesheet" href="styles.css">	
+		<link rel="stylesheet" href="css/estilos.css" type = "text/css">	
 	</head>
 
 	<body>
